--- a/chrome/components/one_UC-settings-addons-pages.css
+++ b/chrome/components/one_UC-settings-addons-pages.css
@@ -89,7 +89,7 @@
         --in-content-page-background: #121018 !important;                                       /* Fondo general */
 
         --in-content-box-background: #15151e !important;                                        /* Color de los textbox y fondo de menús desplegables */
-        --in-content-box-border-color: #272b37 !important;                                      /* Color del borde de los textbox */
+        --in-content-box-border-color: #202430 !important;                                      /* Color del borde de los textbox */
     }}
 
 @media (prefers-color-scheme: light){
@@ -271,8 +271,8 @@ addon-card[expanded] .addon.card {
     outline-offset: 1px !important;
 }
         
-#sidebar, .main-heading, .navigation, .sticky-container  {
-    background: var(--opaque) !important;
+#sidebar, .navigation, .sticky-container{
+    background-color: var(--opaque) !important;
 }
         
 .navigation, #sidebar{ 
@@ -281,7 +281,7 @@ addon-card[expanded] .addon.card {
         
 .sticky-container{
     border-bottom: 1px solid var(--in-content-box-border-color) !important;
-    box-shadow: 3px 3px 7px #00000050 !important;
+    box-shadow: 3px 3px 10px var(--in-content-page-background) !important;
 }
         
 #main{
@@ -293,11 +293,13 @@ addon-card[expanded] .addon.card {
 }
 
 .main-search {
+    background: transparent !important;
     max-width: 100% !important;
     padding: 20px 20px !important;
 }
         
 .main-heading {
+    background: transparent !important;
     margin-top: -52px !important;
     margin-bottom: 4px !important;
     min-width: 50% !important; 
@@ -363,9 +365,10 @@ search-textbox{
     transition: all 0.1s ease !important;
 }
 
-body{
+/* Wallpaper */
+
+body,.sticky-container{
     --bg: var(--lwt-main-image);
-    
     background-image: linear-gradient(var(--opaque), var(--opaque)),
                       linear-gradient(var(--opaque), var(--opaque)), 
                       var(--bg) !important;
@@ -373,7 +376,13 @@ body{
     background-size: cover !important;
     background-attachment: fixed !important;
     background-position-y: var(--background-align-y) !important;
-    backdrop-filter: var(--brightness-wallpaper) !important;
+    }
+        
+.sticky-container{
+    background-image: linear-gradient(var(--opaque), var(--opaque)),
+                      linear-gradient(var(--opaque), var(--opaque)),
+                      linear-gradient(var(--opaque), var(--opaque)),
+                      var(--bg) !important;
     }
 }
 
@@ -389,12 +398,10 @@ body{
 }
 
 .sticky-container {
-    background: var(--in-content-box-background) !important;
-    background: linear-gradient(to right, var(--in-content-box-background) 94%, var(--in-content-page-background)) !important;
     width: 125% !important;
     margin-left: -98px !important;
     border-bottom: 1px solid transparent !important;
     border-image: var(--gradiente-casual) 1 !important;
-    box-shadow: -7px 3px 7px #00000050 !important;
+    box-shadow: -17px 3px 17px #0000006a !important;
     }
 }
