--- a/chrome/components/one_urlbar-searchbar.css
+++ b/chrome/components/one_urlbar-searchbar.css
@@ -11,25 +11,24 @@
 
 findbar{
     background-image: linear-gradient(var(--toolbar-bgcolor, transparent), var(--toolbar-bgcolor, transparent)),
-                      linear-gradient(var(--toolbar-bgcolor), var(--toolbar-bgcolor)), 
+                      linear-gradient(transparent, transparent), 
                       var(--lwt-header-image, var(--lwt-additional-images, none)) !important;
-    background-position: left top !important;
-    background-repeat: repeat !important;
-    background-size: var(--display-theme-with-images) !important;
+    background-position: right bottom, right bottom, right center, left center !important;
+    background-repeat: repeat, repeat, var(--lwt-background-tiling) !important;
+    background-size: auto !important;
     box-shadow: none !important;
-    z-index: 3 !important;
     color: var(--lwt-tab-text) !important;
     border: none !important;
-}
-
-:root:is([style*="--lwt-additional-images"],[lwtheme-image]) findbar{
-    outline: 1px solid color-mix(in srgb, var(--toolbar-bgcolor) 96%, var(--lwt-tab-text)) !important;
-    outline-offset: -1px !important;
 }
 
 .findbar-find-status[status="notfound"] {
     font-weight: 600 !important;
     text-decoration: underline !important;
+}
+
+.findbar-textbox {
+    border-color: transparent !important;
+    background-color:  var(--toolbarbutton-hover-personal) !important;
 }
 
 .findbar-textbox:focus {
@@ -47,7 +46,8 @@ findbar{
 /* "popup_highlight" ---> 1.- keyboard highlight ;  2.-mouse highlight */
 
 .urlbarView-row[selected], .urlbarView-row[row-selectable]:not([selected]):hover {
-    --urlbar-popup-url-color: #ffffff !important; 
+    --urlbar-popup-url-color: #ffffff !important;
+    color: #ffffff !important;
     background-color: var(--autocomplete-popup-hover-background) !important;
     --link-color: #ffffff !important;
     border-radius: 0px !important;
@@ -67,13 +67,6 @@ findbar{
 
 .urlbarView-tags, .urlbarView-url, .urlbarView-title:not(:empty)~.urlbarView-action {
     font-size: 1.0em !important;
-}
-
-/* tamaño letras urlbar */
-
-#urlbar-input {
-    font-weight: 501 !important;
-    opacity: 0.9 !important;
 }
 
 /* Sugerencias de búsqueda */
@@ -109,7 +102,8 @@ findbar{
 #urlbar .searchbar-engine-one-off-item {
     border-radius: var(--toolbarbutton-border-radius) !important;
 }
-#urlbar .searchbar-engine-one-off-item:hover {
+.searchbar-engine-one-off-item:not([selected]):hover {
+    background-color: var(--button-hover-bgcolor) !important;
     color: #ffffff !important;
 }
 
@@ -150,6 +144,7 @@ findbar{
 .urlbarView-row:is([type="switchtab"], [type="remotetab"], [type="clipboard"]) {
   & > .urlbarView-row-inner > .urlbarView-no-wrap > .urlbarView-action
 {
+    color: white !important;
     padding-block: 3px 5px !important;
     margin-block: -2px -3px !important;
   }
@@ -253,31 +248,21 @@ findbar{
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-@media (-moz-bool-pref:"firefoxone.without-default-colors") {
-    #nav-bar, #PersonalToolbar, findbar {
-    outline: 1px solid color-mix(in srgb, var(--toolbar-bgcolor) 96%, var(--lwt-tab-text)) !important;
-    outline-offset: -1px !important;
-    }
-}
-
-/* Bordes de las toolbar cuando left-sidebar no es usada */
+/* Margen de las toolbar cuando left-sidebar no es usada */
 
 #nav-bar, #PersonalToolbar {
     border-radius: 8px !important;
     margin-inline: 4px !important;
 }
 
-#nav-bar{
-    margin-block-end: 1px !important;
-}
-
 #PersonalToolbar{
-    padding-block: 1px !important;
+    margin-block-start: 1px !important;
     padding-inline: 1px !important;
+    padding-block: 1px !important;
 }
 
 :root:is([sizemode="fullscreen"]) #nav-bar{
-    margin-bottom: 2px !important;
+    margin-bottom: 1px !important;
 }
 
 /* Search-bar */
@@ -323,7 +308,7 @@ findbar{
 }
 
 #identity-box[pageproxystate="valid"].chromeUI #identity-icon {
-    list-style-image: url("../images/foxFill.svg") !important;
+    list-style-image: url("../icons/foxFill.svg") !important;
     -moz-context-properties: fill !important;
     fill: var(--lwt-tab-text) !important;
     width: 15px !important;
@@ -505,49 +490,4 @@ description#identity-popup-content-owner-label, description#identity-popup-conte
 
 .urlbarView-type-icon {
     display: none !important;
-}
-
-/*  --------------------------------------- Rounded corner in pages --------------------------------------- */
-
-/* Nuevo espacio alrededor del contenido web */
-
-.browserContainer {
-    padding: 2px 5px 5px 5px !important;
-}
-
-.browserStack>browser{
-    border-radius: 8px !important;
-    outline: 2px solid var(--lwt-frame) !important;
-    outline-offset: 1px !important;
-    box-shadow: 0 0 4px 0px color-mix(in srgb, var(--lwt-frame) 85%, var(--lwt-tab-text)) !important;
-}
-
-:root:is([sizemode="fullscreen"]) :is(.browserContainer,.browserStack>browser) {
-    padding: initial !important;
-    margin: initial !important;
-    border-radius: 0px !important;
-}
-
-findbar{ 
-    border-radius: 8px !important; 
-    margin: 5px -1px -1px -1px !important; 
-}
-
-.browserContainer, .browserStack, #browser{
-    background-color: var(--lwt-frame) !important;
-}
-
-/* Corners en ventanas emergentes */
-
-:root:is([chromehidden~="toolbar"]) #nav-bar{
-    margin-top: 4px !important;
-    margin-right: 4px !important;
-    border-radius: 8px 8px 0 0  !important;
-}
-
-:root:is([chromehidden~="toolbar"]) .browserStack>browser{
-    margin: -2px 0px 0px 0px !important; 
-    border-radius: 0 0 8px 8px !important;
-    outline: none !important;
-    box-shadow: 0 0 0 1px var(--toolbar-bgcolor) !important;
 }
