--- a/chrome/components/one_windows-controls.css
+++ b/chrome/components/one_windows-controls.css
@@ -8,7 +8,7 @@
     .titlebar-button{
         background-color: transparent !important;
         padding-inline: 4px !important;
-        padding-block-start: calc(var(--tab-block-margin-personal) + 4px) !important;
+        /*padding-block-start: calc(var(--tab-block-margin-personal) + 4px) !important;/**/
     }
     
     .titlebar-button:hover{
@@ -61,21 +61,24 @@
     
     .titlebar-button{
         list-style-image: none !important;
-        appearance: auto !important;
+        appearance: none !important;
     }
     .titlebar-button > .toolbarbutton-icon{
+        appearance: auto !important;
         background: none !important;
+        width: unset !important;
+        height: unset !important;
     }
-    .titlebar-min {
+    .titlebar-min > .toolbarbutton-icon{
         -moz-default-appearance: -moz-window-button-minimize !important;
     }
-    .titlebar-max {
+    .titlebar-max > .toolbarbutton-icon{
         -moz-default-appearance: -moz-window-button-maximize !important;
     }
-    .titlebar-restore {
+    .titlebar-restore > .toolbarbutton-icon{
         -moz-default-appearance: -moz-window-button-restore !important;
     }
-    .titlebar-close {
+    .titlebar-close > .toolbarbutton-icon{
         -moz-default-appearance: -moz-window-button-close !important;
     }
     .titlebar-buttonbox {
